fix vertical alignment for popup for both youtube videos and images

--- a/src/styles/Popup.css
+++ b/src/styles/Popup.css
@@ -19,9 +19,19 @@
 }
 
 .Popup img {
+  position: absolute;
   max-height: 90%;
   max-width: 90%;
   width: auto;
   height: auto;
-  margin: 2vw auto;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+.Popup iframe {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
 }
